--- a/src/components/PostPreview.astro
+++ b/src/components/PostPreview.astro
@@ -8,5 +8,5 @@
     numquam qui odio assumenda, nostrum quis doloremque placeat, saepe soluta
     quod.
   </p>
-  <a href="/soemthing">Read more</a>
+  <a href="/soemthing" class="hover:underline underline-offset-4 font-semibold text-headline hover:text-primary">Read more</a>
 </div>
