--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -4,6 +4,6 @@ const { title } = Astro.props as Props;
 ---
 
 <section>
-  <h1 class="capitalize text-xl font-semibold mb-10 text-headline dark:text-headline-dark">{title}</h1>
+  <h1 class="capitalize text-xl font-semibold mb-10 text-primary">{title}</h1>
   <slot/>
 </section>
