--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,14 +3,18 @@ export interface Props {}
 const {} = Astro.props as Props;
 ---
 
-<footer>
-    <h3>Links</h3>
-    <ul>
-        <li><a href="https://github.com/lpbayliss">GitHub</a></li>
-        <li>
-            <a href="https://www.linkedin.com/in/lpbayliss/">LinkedIn</a>
-        </li>
-        <li><a href="/terms-of-use">Terms of Use</a></li>
-        <li><a href="/privacy-policy">Privacy Policy</a></li>
-    </ul>
+<footer class="max-h-80 bg-primary text-headline px-6 py-12 mt-16 space-y-8">
+    <h1 class="text-xl font-semibold">Luke Bayliss</h1>
+    <div>
+        <h3 class="text-lg">Links</h3>
+        <ul class="underline underline-offset-2">
+            <li><a href="https://github.com/lpbayliss">GitHub</a></li>
+            <li>
+                <a href="https://www.linkedin.com/in/lpbayliss/">LinkedIn</a>
+            </li>
+            <li><a href="/terms-of-use">Terms of Use</a></li>
+            <li><a href="/privacy-policy">Privacy Policy</a></li>
+        </ul>
+    </div>
+    <p>© 2022-present Luke Bayliss. All Rights Reserved.</p>
 </footer>
