--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,13 +10,14 @@ const { title } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="bg-canvas dark:bg-canvas-dark text-paragraph dark:text-paragraph-dark">
+<html lang="en" class="bg-canvas text-paragraph">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script src="https://kit.fontawesome.com/a9621aee15.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<Navigation />
