--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Hero from "../components/Hero.astro";
 import PostPreview from "../components/PostPreview.astro";
 import Section from "../components/Section.astro";
 import Layout from "../layouts/Layout.astro";
@@ -6,8 +7,10 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Luke Bayliss">
 	<main>
-		<section class="h-72 bg-surface dark:bg-surface-dark"></section>
-		<div class="flex flex-col lg:flex-row space-x-0 lg:space-x-16 space-y-16 lg:space-y-0 max-w-6xl mx-auto px-6 pt-16">
+		<Hero />
+		<div
+			class="flex flex-col lg:flex-row space-x-0 lg:space-x-16 space-y-16 lg:space-y-0 max-w-6xl mx-auto px-6 pt-16"
+		>
 			<Section title="Latest posts">
 				<PostPreview />
 				<PostPreview />
