--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,7 @@ const {} = Astro.props as Props;
 <nav
 	class="flex w-full justify-start max-w-6xl mx-auto h-14 lg:h-20 items-center px-6"
 >
-	<a href="" class="mr-12 text-xl font-semibold text-[#fffffe]">Luke Bayliss</a>
+	<a href="" class="mr-12 text-xl font-semibold text-headline">Luke Bayliss</a>
 	<ul class="hidden sm:flex space-x-6 items-center">
 		<li><a href="/posts">Posts</a></li>
 		<li><a href="/experience">Experience</a></li>
