--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,14 +21,10 @@ import Layout from "../layouts/Layout.astro";
 				<PostPreview />
 				<PostPreview />
 			</Section>
-			<div class="space-y-16">
+			<div class="space-y-16 min-w-[40%]">
 				<Section title="About me">
-					<h2>Software engineer from Melbourne, Australia</h2>
 					<p>
-						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius culpa
-						dolores nostrum voluptatum facilis itaque, id, illum numquam
-						consectetur praesentium iure laboriosam corporis repellat hic
-						assumenda voluptatibus quae maiores! Adipisci!
+						I am a software engineer from Melbourne, Australia. I'm currently working for the Australian based start up <a href="https://www.mryum.com/company">Mr Yum</a>.
 					</p>
 				</Section>
 				<Section title="Get in contact">
