--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ export interface Props {}
 const {} = Astro.props as Props;
 ---
 
-<footer class="max-h-80 mt-16 bg-surface">
+<footer class="max-h-80 mt-auto bg-surface">
     <div
         class="hidden md:flex justify-between max-w-6xl mx-auto px-6 py-12 text-headline"
     >
@@ -14,7 +14,7 @@ const {} = Astro.props as Props;
             <Copyright />
         </div>
         <div class="mr-24">
-            <h3 class="text-lg">Links</h3>
+            <h3 class="text-lg mb-2">Links</h3>
             <ul class="underline underline-offset-2">
                 <li><a href="https://github.com/lpbayliss">GitHub</a></li>
                 <li>
@@ -31,7 +31,7 @@ const {} = Astro.props as Props;
     >
         <h1 class="text-xl font-semibold">Luke Bayliss</h1>
         <div class="mr-24">
-            <h3 class="text-lg">Links</h3>
+            <h3 class="text-lg mb-2">Links</h3>
             <ul class="underline underline-offset-2">
                 <li><a href="https://github.com/lpbayliss">GitHub</a></li>
                 <li>
