--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Footer from "../components/Footer.astro";
+import Hero from "../components/Hero.astro";
 import Navigation from "../components/Navigation.astro";
 
 export interface Props {
@@ -19,8 +20,9 @@ const { title } = Astro.props as Props;
 		<title>{title}</title>
 		<script src="https://kit.fontawesome.com/a9621aee15.js" crossorigin="anonymous"></script>
 	</head>
-	<body>
+	<body class="h-screen flex flex-col">
 		<Navigation />
+		<Hero />
 		<slot />
 		<Footer />
 	</body>
