--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<div class="relative h-48 w-full mb-[200px]">
+<div class="relative h-48 w-full">
   <svg
     class="w-full absolute left-0 right-0"
     id="visual"
