--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,7 +5,9 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Luke Bayliss | Projects">
     <main class="max-w-6xl mx-auto px-6 pt-16 mb-16">
-        <h1 class="capitalize text-xl font-semibold mb-10 text-primary">
+        <h1
+            class="capitalize text-xl font-semibold mb-10 text-primary border-b border-primary max-w-sm"
+        >
             My Projects
         </h1>
         <div class="flex gap-5 flex-wrap justify-center">
