--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import Hero from "../components/Hero.astro";
 import Navigation from "../components/Navigation.astro";
 
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props as Props;
@@ -12,18 +12,21 @@ const { title } = Astro.props as Props;
 
 <!DOCTYPE html>
 <html lang="en" class="bg-canvas text-paragraph min-w-[320px]">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-		<script src="https://kit.fontawesome.com/a9621aee15.js" crossorigin="anonymous"></script>
-	</head>
-	<body class="h-screen flex flex-col">
-		<Navigation />
-		<Hero />
-		<slot />
-		<Footer />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+    <script
+      src="https://kit.fontawesome.com/a9621aee15.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body class="h-screen">
+    <Navigation />
+    <Hero />
+    <slot />
+    <Footer />
+  </body>
 </html>
