--- a/src/pages/success.astro
+++ b/src/pages/success.astro
@@ -3,8 +3,10 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Luke Bayliss | Thanks!">
-    <main class="max-w-6xl mx-auto px-6 pt-16 mb-16 text-center">
-        <h1 class="font-semibold text-5xl mb-6 text-headline">Thankyou for the message!</h1>
-        <p>I'll try my very best to reply as soon as humanly possible!</p>
-    </main>
+  <main class="max-w-6xl mx-auto px-6 py-32 text-center">
+    <h1 class="font-semibold text-5xl mb-6 text-headline">
+      Thank you for the message!
+    </h1>
+    <p>I'll try my very best to reply as soon as humanly possible!</p>
+  </main>
 </Layout>
