--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,16 @@ const { title } = Astro.props as Props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      content="Luke Bayliss is a software developer from Melbourne, Australia."
+    />
+    <meta
+      name="keywords"
+      content="Software, Engineer, Melbourne, Australia, Developer, Programmer, Portfolio, Resume"
+    />
+    <meta name="author" content="Luke Bayliss" />
+    <meta name="robots" content="index, follow" />
     <title>{title}</title>
     <script
       src="https://kit.fontawesome.com/a9621aee15.js"
